<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_menu_lercodigodebarras">Ler código de barras</string>
    <string name="hint_valor_produto">R$: 00,00</string>
    <string name="title_selecionar_cliente">Confirma este cliente?</string>
    <string name="message_nome_cliente">nome</string>
    <string name="message_cpf_cliente">CPF:</string>
    <string name="alertdialog_sim">Sim</string>
    <string name="alertdialog_nao">Não</string>
    <string name="toast_adicionado_ao_carrinho">Adicionado ao carrinho.</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="label_codigo_de_barras">Código Produto</string>
    <string name="hint_codigo_de_barras">Digite um código para o cliente</string>
    <string name="label_nome">Nome:</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_valor">Valor:</string>
    <string name="hint_digite_valor">Digite o valor</string>
    <string name="label_quantidade">Quantidade:</string>
    <string name="hint_quantidade_digite">Digite a quantidade</string>
    <string name="titulo_tela_produto_administracao">Produto (administração)</string>
    <string name="bt_salvar">Salvar</string>
    <string name="toast_produto_salvo">Produto salvo.</string>
    <string name="snack_operacao_falhou">Operação falhou.</string>
    <string name="snack_preencher_todos_campos">Todos os campos devem ser preenchidos.</string>
    <string name="titulo_janela_galeria_imagens">Selecione uma imagem</string>
    <string name="toast_foto_produto_upload_fail">A foto do produto não foi salva.</string>
    <string name="titulo_janela_produtoadmin">Produto (Admin)</string>
    <string name="menu_limparform">Limpar</string>
    <string name="message_processando">Processando ...</string>
    <string name="toast_produto_nao_cadastrado">Produto não cadastrado.</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_cpf">CPF no formato 123.456.789-10</string>
    <string name="toast_cliente_salvo">Cliente salvo.</string>
    <string name="titulo_janela_cliente_admin">Cliente (Admin)</string>
    <string name="toast_codigo_barras_ja_cadastrado">Código de barras já cadastrado.</string>
    <string name="toast_cliente_nao_cadastrado">Cliente não cadastrado.</string>
    <string name="bt_ver_pedidos">Ver Pedidos</string>
    <string name="snack_nao_ha_pedidos">Não há pedidos para este cliente</string>
    <string name="titulo_janela_pedidos">Pedidos</string>
    <string name="toast_problemas_signin">Problemas no signIn.</string>
    <string name="title_menu_carrinhocompras">Carrinho de compras</string>
    <string name="title_menu_finalizar_pedido">Finalizar Pedido</string>
    <string name="title_menu_cancelar_pedido">Cancelar pedido</string>
    <string name="title_excluir_item">Confirmar exclusão de item?</string>
    <string name="toast_item_excluido">Item excluido do carrinho</string>
    <string name="message_nome_produto">Nome</string>
    <string name="title_editar_item">Editar item?</string>
    <string name="title_finalizar_venda">Deseja finalizar sua venda?</string>
    <string name="title_cancelar_venda">Deseja cancelar sua venda?</string>
    <string name="app_name">Sigos</string>
    <string name="hint_senha">senha</string>
    <string name="hint_email">Email</string>
    <string name="contentDescription">Logo da empresa</string>
    <string name="bt_sigin">Sing In</string>
    <string name="bt_sigup">Sing Up</string>
    <string name="password_fail">Senha não cadastrada.</string>
    <string name="email_fail">Email não cadastrado.</string>
    <string name="email_already">Email já cadastrado.</string>
    <string name="signup_fail">Sign UP falhou. A internet está conectada?</string>
    <string name="hint_estoque">Estoque</string>
    <string name="hint_nome">Nome</string>
    <string name="content_description_foto_produto">foto do produto</string>
    <string name="hint_valor">Valor</string>
    <string name="action_settings">configurações</string>
    <string name="menu_nav_carrinho">Carrinho</string>
    <string name="menu_nav_lista_de_clientes">clientes</string>
    <string name="menu_nav_produto_admin">Produto</string>
    <string name="menu_nav_cliente_admin">Cliente</string>
    <string name="menu_nav_sobre">sobre</string>
    <string name="menu_nav_sair">sair</string>
    <string name="menu_vender">Vender</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_lercodigodebarras">Ler código de barras</string>
    <string name="hint_nome_searchview">nome</string>
    <string name="hint_dados_basicos_do_cliente">Dados básicos do cliente</string>
    <string name="hint_nome_do_cliente">Nome do cliente</string>
    <string name="content_description_foto_do_cliente">foto do cliente</string>
    <string name="sim">sim</string>
    <string name="nao">não</string>
    <string name="snack_operacao_cancelada">Operação cancelada.</string>
    <string name="titulo_cliente_selecionado">Confirmar esta seleção?</string>
    <string name="toast_cliente_selecionado">Cliente selecionado.</string>
    <string name="foto_do_produto">foto do produto</string>
    <string name="snack_selecione_um_cliente">Selecione um cliente.</string>
    <string name="hint_mascara_valor">R$: 00,00</string>
    <string name="hint_nome_produto">Nome Produto</string>
    <string name="hint_estoque_produto">Estoque: 00</string>
    <string name="bt_vender">Vender</string>
    <string name="hint_descricao_produto">Descrição do Produto</string>
    <string name="hint_quantos">Quantos?</string>
    <string name="hint_vendedor">vendedor@email.com</string>
    <string name="snack_digite_quantidade">Digite a quantidade.</string>
    <string name="snack_atualizaram_estoque">Atualizaram o estoque, confira.</string>
    <string name="label_estoque">Estoque:</string>
    <string name="toast_adicionado_carrinho">Adicionado ao carrinho.</string>
    <string name="snack_estoque_insuficiente">Estoque insuficiente.</string>
    <string name="total_pedido_carrinho">Total = R$ 00,00</string>
    <string name="nome_do_cliente_carrinho">Nome do Cliente</string>
    <string name="hint_quantidade">Quantidade:</string>
    <string name="hint_total_item">R$ 00,00</string>
    <string name="titulo_janela_carrinho">Carrinho</string>
    <string name="titulo_janela_produto">Produto</string>
    <string name="titulo_janela_clientes">Clientes</string>
    <string name="toast_pedido_gerado">Pedido gerado.</string>
    <string name="message_quase_la">Quase lá. Confirmar?</string>
    <string name="message_total_pedido">Total do pedido = </string>
    <string name="message_tem_certeza">Ops! Tem certeza?</string>
    <string name="message_confirmar_cancelamento_pedido">Confirmar o cancelamento do pedido?</string>
    <string name="message_excluir_item_carrinho">Você deseja mesmo excluir este item do carinho?</string>
    <string name="message_editar_item">Este produto será retirado do carrinho. Ao editar venda-o novamente</string>
    <string name="toast_produto_no_carrinho">O produto já está no carrinho</string>
    <string name="snack_carrinho_vazio">O carrinho está vazio.</string>
    <string name="title_atencao">Atenção</string>
    <string name="message_carrinho_com_produtos">Há produtos no carrinho. Se você sair ele será esvaziado.</string>
    <string name="texto_sobre">
        Aplicativo desenvolvido na disciplina de Programação para Dispositivos Móveis, no
        curso Superior de Tecnologia em Sistemas para Internet, do <b>Instituto Federal de
        Educação, Ciência e Tecnologia Sul-rio-grandense (IFSul)</b>.\nPowered By:
        Thalles França \n<u>thallesfaf@gmail.com</u>
        \n&#169;Todos os direitos reservados.</string>
    <string name="titulo_janela_sobre">Sobre</string>
    <string name="snack_codigo_barras_nao_cadastrado">Código de barras não cadastrado</string>
    <string name="titulo_janela_leitor_codigo_de_barras">Leitor de código de barras</string>
    <string name="titulo_janela_produtos">Produtos</string>
    <string name="title_fianlizar_app">Deseja finalizar aplicativo?</string>
    <string name="toast_foto_cliente_upload_fail">Falha no upload da foto do cliente</string>
    <string name="novo">Novo</string>
    <string name="deletar">Deletar</string>
    <string name="atualiza">Atualiza</string>
    <string name="toast_equipamento_selecionado" />
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">fcm_message</string>

        <string-array name="editStatus">
            <item>Aberto</item>
            <item>Em análise</item>
            <item>Aguardando aprovação</item>
            <item>Concluído</item>
        </string-array>
</resources>