<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProdutoDetalheActivity"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/container_activity_detalhe_produto" >

    <ImageView
        android:id="@+id/imvFoto"
        android:layout_width="146dp"
        android:layout_height="145dp"
        android:layout_marginBottom="58dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/foto_do_produto"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuantidadeProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNomeProduto"
        app:srcCompat="@drawable/img_carrinho_de_compras" />

    <TextView
        android:id="@+id/tvValorProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:hint="@string/hint_valor_produto"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDerscricaoProduto"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvQuantidadeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:gravity="center"
        android:hint="@string/hint_estoque_produto"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_nome_produto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btComprarProduto"
        android:layout_width="142dp"
        android:layout_height="57dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorAccent"
        android:text="@string/bt_vender"
        android:textColor="@color/font_white"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etQuantidade"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDerscricaoProduto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:hint="@string/hint_descricao_produto"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@+id/btComprarProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantidadeProduto" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="192dp"
        android:layout_height="57dp"
        android:layout_marginBottom="66dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_quantos"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btComprarProduto" />

    <TextView
        android:id="@+id/tvVendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:hint="@string/hint_vendedor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>